--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: false
+
 language: go
+
 go:
-  - 1.2.1
-  - 1.3
   - 1.4
+  - tip
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - go: tip
