--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,22 @@ matrix:
   fast_finish: true
   allow_failures:
     - go: tip
+
+env:
+  - "PATH=/home/travis/gopath/bin:$PATH"
+
+before_install:
+  - go get github.com/mitchellh/gox
+  - gox -build-toolchain -osarch="linux/amd64 darwin/amd64"
+  - go get github.com/tcnksm/ghr
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out ./packer2terraform/...
+  - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
+
+after_success:
+  - gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
+  - ghr --username saymedia --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
